contact section done

--- a/index.html
+++ b/index.html
@@ -238,7 +238,67 @@
     <!-- frequently questions section end -->
 
     <!-- contact section start -->
-     <section></section>
+    <section class="overflow-x-hidden pb-30">
+      
+      <!-- contact section heading -->
+      <h2 class="text-[#414040] text-4xl font-extrabold text-center mb-6 mt-0">Contact With Us</h2>
+      
+      <!-- contact section description -->
+       <p class="text-[#707070] text-center mb-16 mx-2">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+       <!--all div's parent div -->
+       <div class="grid gap-8 lg:flex lg:justify-between max-w-[1170px] mx-auto px-4">
+
+       <!-- parent div -->
+       <div class="grid gap-5 mx-auto md:grid-cols-2 lg:gap-0">
+
+        <!-- child div -->
+        <div class="p-16 bg-[#F3F3F3] border">
+          <img src="./images/address.png" alt="address icon" srcset="" class="mx-auto">
+          <h5 class="txt-[#414040] font-semibold text-xl text-center">Address</h5>
+          <p class="text-[#707070] text-lg text-center">A108 Adam Street,</p>
+          <p class="text-[#707070] text-lg text-center">New York, NY 535022</p>
+        </div>
+
+        <!-- child div -->
+        <div class="p-16 bg-[#F3F3F3] border">
+          <img src="./images/call.png" alt="call icon" srcset="" class="mx-auto">
+          <h5 class="txt-[#414040] font-semibold text-xl text-center">Call Us</h5>
+          <p class="text-[#707070] text-lg text-center">+88 01750 00 00 00</p>
+          <p class="text-[#707070] text-lg text-center">+88 01750 00 00 00</p>
+        </div>
+
+        <!-- child div -->
+        <div class="p-16 bg-[#F3F3F3] border">
+          <img src="./images/call.png" alt="call icon" srcset="" class="mx-auto">
+          <h5 class="txt-[#414040] font-semibold text-xl text-center">Email Us</h5>
+          <p class="text-[#707070] text-lg text-center">info@gmail.com</p>
+          <p class="text-[#707070] text-lg text-center">info@gmail.com</p>
+        </div>
+
+        <!-- child div -->
+        <div class="p-16 bg-[#F3F3F3] border">
+          <img src="./images/call.png" alt="call icon" srcset="" class="mx-auto">
+          <h5 class="txt-[#414040] font-semibold text-xl text-center">Working Hours</h5>
+          <p class="text-[#707070] text-lg text-center">Mon-Fri: 9AM to 5PM</p>
+          <p class="text-[#707070] text-lg text-center">Sunday: 9AM to 1PM</p>
+        </div>
+
+       </div>
+
+       <!-- form div -->
+       <div class="grid gap-8">
+        <input type="text" name="" id="" placeholder="Your Name" class="placeholder-[#707070] p-6 bg-[#F3F3F3] w-[90%] rounded-lg lg:w-[570px]">
+        <input type="email" name="" id="" placeholder="Your Email" class="placeholder-[#707070] p-6 bg-[#F3F3F3] w-[90%] rounded-lg lg:w-[570px]">
+        <input type="text" name="" id="" placeholder="Subject" class="placeholder-[#707070] p-6 bg-[#F3F3F3] w-[90%] rounded-lg lg:w-[570px]">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" class="placeholder-[#707070] bg-[#F3F3F3] pl-6 pt-6 rounded-lg 
+        w-[90%] lg:w-[570px]"></textarea>
+
+        <button class="bg-[#B68C5A] text-xl text-center font-semibold text-white rounded-lg py-5 lg:px-50 w-[90%] lg:w-[570px]">Send Message</button>
+       </div>
+       </div>
+
+     </section>
     <!-- contact section end -->
 
 
