footer section done

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     
     <!-- Navbar section start -->
-    <section class="flex flex-col justify-center items-center gap-4 md:flex-row my-12 md:justify-between lg:mx-12 xl:mx-96 bg-black">
+    <section class="flex flex-col justify-center items-center gap-4 py-5 md:flex-row my-12 md:justify-between lg:mx-12 xl:mx-96 bg-black">
   
    
         <!-- logo -->
